// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Code /> should render Code with color 1`] = `
<div>
  <span
    class="BaseBox-bmPWx Code__CodeContainer-l9m17z-0  iIqNrw"
    data-blade-component="code"
  >
    <code
      class="StyledBaseText-dVBfTO esiDFA"
      data-blade-component="base-text"
    >
      TEST_TOKEN
    </code>
  </span>
</div>
`;

exports[`<Code /> should render Code with default properties 1`] = `
<div>
  <span
    class="BaseBox-bmPWx Code__CodeContainer-l9m17z-0  gxbKGz"
    data-blade-component="code"
  >
    <code
      class="StyledBaseText-dVBfTO edQJln"
      data-blade-component="base-text"
    >
      TEST_TOKEN
    </code>
  </span>
</div>
`;

exports[`<Code /> should render isHighlighted false Code 1`] = `
<div>
  <span
    class="BaseBox-bmPWx Code__CodeContainer-l9m17z-0  iIqNrw"
    data-blade-component="code"
  >
    <code
      class="StyledBaseText-dVBfTO hAeQjj"
      data-blade-component="base-text"
    >
      NON-HIGHLIGHTED
    </code>
  </span>
</div>
`;

exports[`<Code /> should render medium Code 1`] = `
<div>
  <span
    class="BaseBox-bmPWx Code__CodeContainer-l9m17z-0  gxbKGz"
    data-blade-component="code"
  >
    <code
      class="StyledBaseText-dVBfTO xrkaN"
      data-blade-component="base-text"
    >
      MEDIUM
    </code>
  </span>
</div>
`;

exports[`<Code /> should render small Code 1`] = `
<div>
  <span
    class="BaseBox-bmPWx Code__CodeContainer-l9m17z-0  gxbKGz"
    data-blade-component="code"
  >
    <code
      class="StyledBaseText-dVBfTO edQJln"
      data-blade-component="base-text"
    >
      SMALL
    </code>
  </span>
</div>
`;
